tests/diagnostics/catalog/snapshots/ir/IR0030.snap
error[IR0030]: IR_E_INVALID_CAST
 --> tests/diagnostics/catalog/sources/ir/IR0030.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0030
  = help: keep IR validation diagnostics structured and catalog-backed
